...
          control={control}
          name="amount"
          render={({ field: { onBlur, onChange, value } }) => (
            <TextField
              autoFocus={!initial?.amountPaise}
              label="Amount"
              placeholder="₹ 0.00"
              keyboardType="decimal-pad"
              value={value}
              onBlur={onBlur}
              onChangeText={onChange}
              error={errors.amount?.message}
            />
...
